# Revealer

./: .gitignore  CHANGELOG.md  README.md  REVEALER-COMMANDS.md  TOPROMPT.md  pyproject.toml
.claude/skills/revealer-slides/: SKILL.md
.claude/skills/revealer-slides/references/: patterns.md  syntax.md  verify.md
.claude/skills/revealer-slides/scripts/: snap.sh
.github/workflows/: docs.yml  test.yml
Demo/: Simple.html  Themes.pres
Documentation/: authoring.md  bibliography.md  cli.md  conf.py  editor.md  figures.md  gen_reference.py  gen_theme_gallery.py  index.md  installation.md  internals.md  pres-shortcuts.md  pres-structure.md  pres-syntax.md  quickstart.md  recipes.md  svg.md  themes.md
Documentation/reference/: cli.md  constructs.md  directives.md  index.md  settings.md
docs/superpowers/plans/: 2026-07-08-editor-authoring-ux.md  2026-07-18-revealer-slides-skill.md
docs/superpowers/specs/: 2026-07-07-letterbox-and-thumbnail-grid-design.md  2026-07-07-vertical-spacer-design.md  2026-07-08-editor-authoring-ux-overhaul-design.md  2026-07-18-revealer-slides-skill-design.md
src/revealer/: __init__.py  assets.py  build.py  cli.py  config.py  edit.py  grammar.py  i18n.py  pdf.py  serve.py
src/revealer/data/js/: editor.css  editor.js  revealer.js
src/revealer/data/js/editor/: README.md  blockmove.js  boot.js  chrome.js  core.js  (+14 more)
src/revealer/data/pres/: template.pres
src/revealer/data/themes/: _revealer-base.css  ljp.mplstyle  revealer.mplstyle  sfi.css  sfi.mplstyle
tests/: conftest.py  helpers.py  test_block_size.py  test_build_golden.py  test_bullet_frag.py  test_edit_ops.py  test_editor_harness.py  test_editor_js.py  test_escaping.py  test_grammar.py  test_history.py  test_i18n.py  test_include.py  test_inline_map.py  test_katex_macros.py  test_mplstyle.py  test_multifile_edit.py  test_new_template.py  test_outline_ops.py  test_pdf_fragments.py  test_plugin_pinning.py  test_serve_http.py  test_serve_robust.py  test_skill_patterns.py  test_skill_reference.py  test_spacer.py  test_srcmap.py  test_svg_animate.py  test_svg_hide.py  test_trim_helpers.py  test_warnings.py
tests/data/golden/: demo.html  full.html  simple.html
(+14 files in other folders)
