[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revealer"
dynamic = ["version"]
description = "An overlay of reveal.js to easily create scientific presentations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Candelier Lab" }]
keywords = ["reveal.js", "presentation", "slides", "science"]
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "bibtexparser>=1.4,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/ronceray/Revealer"
Documentation = "https://ronceray.github.io/Revealer/"

[project.scripts]
revealer = "revealer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/revealer"]
exclude = ["**/reveal.js", "**/*.pres.html", "**/*.pyc", "src/revealer/data/js/test"]

[tool.hatch.version]
path = "src/revealer/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # long lines: format strings in emitters are clearer unwrapped
